Update: Added `pointer-events: none` to `.navbar-text-truncate`, `.breadcrumb-text-truncate`, and `.lexicon-icon` to prevent focus highlight in IE11 when clicking links that contain those elements

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -62,6 +62,7 @@
 .navbar-text-truncate {
 	display: inline-block;
 	max-width: 100%;
+	pointer-events: none;
 
 	@include text-truncate;
 
